environments/gloo-edge/gateway-api/with-istio/httpbin-app/base/httpbin-parent-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httpbin-parent-route
  namespace: httpbin
  labels:
    example: httpbin-route
    gateway: https
spec:
  hostnames:
  - "httpbin.glootest.com"
  parentRefs:
    - name: https
      namespace: gloo-system
  rules:
    - backendRefs:
        - name: '*'
          namespace: httpbin
          group: gateway.networking.k8s.io
          kind: HTTPRoute
      matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.solo.io
            kind: RouteOption
            name: httpbin-route-policies
        #- type: ExtensionRef
        #  extensionRef:
        #    group: gateway.solo.io
        #    kind: RouteOption
        #    name: add-header-policy
